vendor/async-trait-0.1.50/tests/ui/delimiter-span.rs
use async_trait::async_trait;

macro_rules! picky {
    ($(t:tt)*) => {};
}

#[async_trait]
trait Trait {
    async fn method();
}

struct Struct;

#[async_trait]
impl Trait for Struct {
    async fn method() {
        picky!({ 123, self });
        picky!({ 123 });
    }
}

fn main() {}
